--- a/Главная.html
+++ b/Главная.html
@@ -39,6 +39,7 @@
 <div class="container mt-5">
     <h1 class="text-center">Добро пожаловать в AutoWorld!</h1>
     <p class="text-center">Здесь вы найдете все про автомобили.</p>
+    <p>Ырыс азамат</p>
     <img src="mycar.jfif" alt="" width="500px" height="500px">
 </div>
 
