--- a/Главная.html
+++ b/Главная.html
@@ -41,6 +41,7 @@
     <p class="text-center">Здесь вы найдете все про автомобили.</p>
     <p>Ырыс азамат</p>
     <img src="mycar.jfif" alt="" width="500px" height="500px">
+    <img src="mycar2.avif" alt="" weight="500px" height="500px">
 </div>
 
 <!-- Bootstrap JS -->
