--- a/Главная.html
+++ b/Главная.html
@@ -40,6 +40,7 @@
     <h1 class="text-center">Добро пожаловать в AutoWorld!</h1>
     <p class="text-center">Здесь вы найдете все про автомобили.</p>
     <p>Ырыс азамат</p>
+    <p>Autoworld</p>
     <img src="mycar.jfif" alt="" width="500px" height="500px">
     <img src="mycar2.avif" alt="" weight="500px" height="500px">
 </div>
